[package]
name = "maa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.139"
libffi = { version = "3.1.0", features = ["system"] }
libloading = "0.7.4"

[build-dependencies]
bindgen = "0.63.0"
